src/objects/Bulk_Entry_Settings__c.object
<CustomObject>
    <description>Holds the configuration details for rendering the fields on the dynamic Visualforce page.</description>
    <fields>
        <fullName>Cancel_URL_Link__c</fullName>
        <label>Cancel URL Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Child_Object__c</fullName>
        <description>Name of the Child Sobject whose records need to be displayed in the Parent Section Summary.</description>
        <inlineHelpText>Name of the Child Sobject whose records need to be displayed in the Parent Section Summary.</inlineHelpText>
        <label>Child Object</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Record_List_Field_Set__c</fullName>
        <description>Name of the Fieldset created for the Child Record List.</description>
        <inlineHelpText>Name of the Fieldset created for the Child Record List.</inlineHelpText>
        <label>Child Record List Field Set</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Record_List_Title__c</fullName>
        <description>Text to display on the Child Section Summary when the page is rendered.</description>
        <inlineHelpText>Text to display on the Child Section Summary when the page is rendered.</inlineHelpText>
        <label>Child Record List Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Record_Size__c</fullName>
        <label>Default Record Size</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Default_Settings_Field_Set__c</fullName>
        <description>Name of the Fieldset created for the Default Setting.</description>
        <inlineHelpText>Name of the Fieldset created for the Default Setting.</inlineHelpText>
        <label>Default Settings Field Set</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_options_section_Title__c</fullName>
        <description>Text to display on the Default Option Section Summary when the page is rendered.</description>
        <inlineHelpText>Text to display on the Default Option Section Summary when the page is rendered.</inlineHelpText>
        <label>Default options section Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Name__c</fullName>
        <formula>Parent_Object__c &amp; &quot;_&quot; &amp;  Child_Object__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Display Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Include_Range_Search__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Range Search?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lookup_Relationship_field__c</fullName>
        <label>Lookup Relationship field</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_List_Field_Set__c</fullName>
        <description>Name of the Fieldset created for the Parent Sobject.</description>
        <inlineHelpText>Name of the Fieldset created for the Parent Sobject.</inlineHelpText>
        <label>Parent List Field Set</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Object__c</fullName>
        <description>Name of the Parent Sobject whose records need to be displayed in the Parent Section Summary.</description>
        <inlineHelpText>Name of the Parent Sobject whose records need to be displayed in the Parent Section Summary.</inlineHelpText>
        <label>Parent Object</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Range_Field__c</fullName>
        <label>Range Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Selection_Title__c</fullName>
        <description>Text to display on the Parent Section Summary when the page is rendered.</description>
        <inlineHelpText>Text to display on the Parent Section Summary when the page is rendered.</inlineHelpText>
        <label>Record Selection Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Criteria_Field_Set__c</fullName>
        <description>Name of the Fieldset created for the Search Criteria.</description>
        <inlineHelpText>Name of the Fieldset created for the Search Criteria.</inlineHelpText>
        <label>Search Criteria Field Set</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Section_Title__c</fullName>
        <description>Text to display on the Search Section Summary when the page is rendered.</description>
        <inlineHelpText>Text to display on the Search Section Summary when the page is rendered.</inlineHelpText>
        <label>Search Section Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Bulk Entry Setting</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Parent_Object__c</columns>
        <columns>Child_Object__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BES-{MM}{DD}{YY}{000000}</displayFormat>
        <label>Bulk Entry Setting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bulk Entry Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>